[gd_scene load_steps=2 format=3 uid="uid://c4wusekmxx21w"]

[ext_resource type="Script" uid="uid://dk7dphxfq5s5u" path="res://scripts/random_event.gd" id="1_6e84v"]

[node name="RandomEvent" type="Node2D"]
script = ExtResource("1_6e84v")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 232.0
offset_top = 406.0
offset_right = 848.0
offset_bottom = 609.0

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "Notifications"

[node name="FeedScroll" type="ScrollContainer" parent="."]
offset_left = 224.0
offset_top = 396.0
offset_right = 855.0
offset_bottom = 608.0

[node name="Feed" type="VBoxContainer" parent="FeedScroll"]
layout_mode = 2

[node name="EcoButton" type="Button" parent="."]
offset_left = 344.0
offset_top = 192.0
offset_right = 748.0
offset_bottom = 380.0

[connection signal="pressed" from="EcoButton" to="." method="_on_eco_button_pressed"]
